Inclusão do copy no final do footer.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <title>Saúde Prática</title>
 </head>
+
 <body>
   <span id="inicio"></span>
   <header id="home" class="container">
@@ -641,9 +643,7 @@
         </ul>
       </div>
       <div id="beneficios-img" data-aos="zoom-in">
-        <img
-          src="assets/antes-depois-cliente.avif"
-          alt="">
+        <img src="assets/antes-depois-cliente.avif" alt="">
       </div>
     </div>
   </section>
@@ -710,6 +710,7 @@
           </div>
         </div>
       </div>
+      <p id="copy">Copyright &copy;2025 Saúde Prática.</p>
     </div>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
